--- a/container/public/index.html
+++ b/container/public/index.html
@@ -7,7 +7,7 @@
   <title>Container</title>
 </head>
 <body>
-  <div id="root-products"></div>
+  <div id="my-products"></div>
   <div id="root-cart"></div>
 </body>
 </html>
